test/FAIL/loadcmd/not_hexa/07_test_load.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="wrong arguments (not unsigned hexa)"
#-------

load boucle.o -0x1000
